# libfreenect2pclgrabber

./: CMakeLists.txt  Kinect2Grabber.h  Kinect2Grabber.hpp  Kinect2GrabberAuto.hpp  README.md  k2g.h  multi_test.cpp  package.xml  test.cpp  test_ros.cpp
calibration/: depth_calibration.yaml  pose_calibration.yaml  rgb_calibration.yaml
calibration512/: depth_calibration.yaml  pose_calibration.yaml  rgb_calibration.yaml
depth_registration_/include/: depth_registration.h
depth_registration_/src/: depth_registration_cpu.cpp  depth_registration_cpu.h
include/: k2g.h  k2g_ros.h  ros_kinect2_grabber.h  serialization.h
launch/: kinect2grabber.launch
modules/: FindFreenect2.cmake
